trunk/Archive2/48/9295b736b9622f/output
main.cpp: In function 'int main()':
main.cpp:12:14: error: invalid new-expression of abstract class type 'A'
  A t = new A();
              ^
main.cpp:1:7: note:   because the following virtual functions are pure within 'A':
 class A {
       ^
main.cpp:3:16: note: 	virtual void A::test()
   virtual void test() = 0;
                ^
main.cpp:12:4: error: cannot declare variable 't' to be of abstract type 'A'
  A t = new A();
    ^
main.cpp:12:4: warning: unused variable 't' [-Wunused-variable]
